--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,9 +7,11 @@ spring = "4.0.3"
 lombok = "1.18.42"
 agrona = "2.4.0"
 
-
+awaitility = "4.3.0"
 cucumber = "7.34.2"
 junit = "6.0.3"
+
+guava = "33.5.0-jre"
 
 
 [plugins]
@@ -26,6 +28,8 @@ lombok = { module = "org.projectlombok:lombok", version.ref = "lombok" }
 
 agrona = { module = "org.agrona:agrona", version.ref = "agrona" }
 
+awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" }
+
 cucumber-dependencies = { module = "io.cucumber:cucumber-bom", version.ref = "cucumber" }
 cucumber = { module = "io.cucumber:cucumber-java" }
 cucumber-junit = { module = "io.cucumber:cucumber-junit-platform-engine" }
@@ -36,7 +40,11 @@ junit = { module = "org.junit.jupiter:junit-jupiter-api" }
 junit-suite = { module = "org.junit.platform:junit-platform-suite" }
 junit-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
+
+jackson-properties = { module = "tools.jackson.dataformat:jackson-dataformat-properties" }
+
 
 [bundles]
 spring-webflux-websocket = ["spring-webflux", "spring-websocket"]
-testing = ["cucumber", "cucumber-junit", "cucumber-spring", "junit", "junit-suite", "spring-test"]
+testing = ["awaitility", "cucumber", "cucumber-junit", "cucumber-spring", "guava", "jackson-properties", "junit", "junit-suite", "spring-test"]
