--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
 logging:
   level:
     org.springframework: INFO
-    org.github.stomp: DEBUG
+    io.github.stomp: DEBUG
 
 server:
   address: 127.0.0.1
