--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,8 +11,6 @@ awaitility = "4.3.0"
 cucumber = "7.34.2"
 junit = "6.0.3"
 
-guava = "33.5.0-jre"
-
 
 [plugins]
 versions = { id = "com.github.ben-manes.versions", version.ref = "versions" }
@@ -40,11 +38,9 @@ junit = { module = "org.junit.jupiter:junit-jupiter-api" }
 junit-suite = { module = "org.junit.platform:junit-platform-suite" }
 junit-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 
-guava = { module = "com.google.guava:guava", version.ref = "guava" }
-
 jackson-properties = { module = "tools.jackson.dataformat:jackson-dataformat-properties" }
 
 
 [bundles]
 spring-webflux-websocket = ["spring-webflux", "spring-websocket"]
-testing = ["awaitility", "cucumber", "cucumber-junit", "cucumber-spring", "guava", "jackson-properties", "junit", "junit-suite", "spring-test"]
+testing = ["awaitility", "cucumber", "cucumber-junit", "cucumber-spring", "jackson-properties", "junit", "junit-suite", "spring-test"]
